--- a/news.css
+++ b/news.css
@@ -260,3 +260,9 @@ body {
     font-size: 0.95rem;
     line-height: 1.4;
 }
+@media (max-width: 768px) {
+    html,body{
+        overflow-x: hidden;
+    }
+    
+}
